examples/compiler_errors/type_mismatch_argument.flx
// expect: compile_error
// expect-error: E300

fn greet(name: String) -> String {
    name
}

fn main() -> Unit {
    let ignored = greet(123)
}
